--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>Merhaba Dünya... 29 Eylül 2024</p>
+    <p style="color:brown">Merhaba Dünya... 29 Eylül 2024</p>
 </body>
 </html>
