--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>Merhaba Dünya... 29 Eylül 2024</p>
+    <p style="color:green">Merhaba Dünya... 29 Eylül 2024</p>
     <p style="color:brown">Merhaba Dünya... 29 Eylül 2024</p>
+    <p style="color:yellow">Merhaba Dünya... 29 Eylül 2024</p>
+    <p style="color:blue">Merhaba Dünya... 29 Eylül 2024</p>
+    <p style="color:green">Merhaba Dünya... 29 Eylül 2024</p>
+
 </body>
+
 </html>
