--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
 <head>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
     <title>Document</title>
 </head>
 
 <body>
+    <div class="myDiv">
+        Kütahya
+    </div>
     <p>Merhaba Dünya... 29 Eylül 2024</p>
-    <p style="color:green">Merhaba Dünya... 29 Eylül 2024</p>
-    <p style="color:brown">Merhaba Dünya... 29 Eylül 2024</p>
-    <p style="color:yellow">Merhaba Dünya... 29 Eylül 2024</p>
-    <p style="color:blue">Merhaba Dünya... 29 Eylül 2024</p>
-    <p style="color:green">Merhaba Dünya... 29 Eylül 2024</p>
+    
 
 </body>
-
+<script>
+   // getir();
+</script>
+<script src="first.js"></script>
 </html>
+
